# Muriel

./: .cookiecutter.json  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  pytest  requirements.txt
.github/workflows/: tests.yml
docs/: conf.py  index.md  reference.md  usage.md
docs/architecture/: ecs_compartment001.xml
src/muriel/: __init__.py  __main__.py  ecs_attribute.py  ecs_buffers.py  ecs_builtin.py  ecs_builtin_states.py  ecs_compartment.py  ecs_component.py  ecs_controller.py  ecs_dataclasses.py  ecs_discovery.py  ecs_entity.py  ecs_events.py  ecs_governed.py  ecs_input_sequence.py  ecs_literals.py  ecs_message_builder.py  ecs_rigidbody.py  ecs_state_component.py  ecs_statemachine.py  ecs_system.py  util.py
src/muriel/collisions/: __init__.py  ecs_boundingbox.py  ecs_bsp.py  ecs_bsp_utils.py  ecs_constants.py  ecs_plane.py  ecs_point.py
src/muriel/headless_collision_detection/Software_3D_engine-main/: main.py  object_3d.py  polyhedra.py
src/muriel/headless_collision_detection/tests/: test_cube.py  zoom_pan.py
test_collisions/: test_aabb.py  test_bsp_utils.py  test_plane.py  test_polygon_tests.py
tests/: __init__.py  junit-test.xml  tempCodeRunnerFile.py  test_attributes.py  test_component.py  test_component_buffer.py  test_entity.py  test_main.py  test_physics.py  test_player.py  test_queue_buffer.py  test_statemachine.py  test_system.py
