[tool.poetry]
name = "Burgos_ECS"
version = "0.0.1"
description = "Muriel"
authors = ["Jalin Howard <jhowar39@emich.edu>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/DmitrievichLevin/Burgos_ECS"
repository = "https://github.com/DmitrievichLevin/Burgos_ECS"
documentation = "https://Burgos_ECS.readthedocs.io"
packages = [
    { include = "muriel", from = "src" },
]
classifiers = [
    "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
Changelog = "https://github.com/DmitrievichLevin/Burgos_ECS/releases"

[tool.poetry.dependencies]
python = "^3.10"
click = ">=8.0.1"
typeguard = "^4.1.5"
sphinx = "^6.0.0"
nox-poetry = "^1.0.3"
renity = "^2.0.10"
numpy = "^1.26.4"
types-pillow = "^10.2.0.20240311"
types-requests = "^2.31.0.20240311"
pytest = "^8.1.1"
pygame = "^2.5.2"
plum-dispatch = "^2.3.2"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
safety = ">=1.10.3"
sphinx = ">=6.0.0"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=5.0.0"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}


[tool.poetry.scripts]
Burgos_ECS = "muriel.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["muriel", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_also= ["raise", "@(abc\\.)?abstractmethod",]

[tool.coverage.html]
directory="coverage_report"

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
allow_redefinition = true

[tool.black]
line-length = 80

[tool.pytest.ini_options]
log_file = "tests/debug.log"
log_file_level = "DEBUG"
log_file_format = "\n%(asctime)s \nline %(lineno)s in, %(module)s \nfunction: %(funcName)s() \nmessage: %(message)s"

[tool.pytest]
junit_logging = "system-out"
junit_log_passing_tests = true
junit_duration_report = "call"
junit_family="xunit1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
